--- a/tasma/disk-manager/po/es.po
+++ b/tasma/disk-manager/po/es.po
@@ -8,70 +8,78 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-30 22:16+0200\n"
-"PO-Revision-Date: 2006-11-30 21:59+0200\n"
-"Last-Translator: Gökmen GÖKSEL <gokmen@pardus.org.tr>\n"
-"Language-Team:  <tr@li.org>\n"
+"PO-Revision-Date: 2006-12-02 20:22-0400\n"
+"Last-Translator: Klemens Häckel <click3d@linuxmail.org>\n"
+"Language-Team: es <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: src/disk-manager.py:78 src/disk-manager.py:315 src/diskform.py:132
+#: src/disk-manager.py:78
+#: src/disk-manager.py:315
+#: src/diskform.py:132
 msgid "Disk Manager"
-msgstr ""
+msgstr "Administrador de Discos"
 
-#: src/disk-manager.py:200 src/disk-manager.py:219
+#: src/disk-manager.py:200
+#: src/disk-manager.py:219
 msgid "Completed"
-msgstr ""
+msgstr "Completado"
 
-#: src/disk-manager.py:200 src/disk-manager.py:219
+#: src/disk-manager.py:200
+#: src/disk-manager.py:219
 msgid "File /etc/fstab updated !"
-msgstr ""
+msgstr "Archivo /etc/fstab actualizado !"
 
 #: src/disk-manager.py:250
 msgid "Mount Point"
-msgstr ""
+msgstr "Punto de Montaje"
 
 #: src/disk-manager.py:251
 msgid "File System Type"
-msgstr ""
+msgstr "Tipo de Sistema de Archivos"
 
 #: src/disk-manager.py:310
 msgid "Disk Manager is already running!"
-msgstr ""
+msgstr "Administrador de Discos ya se está ejecutando"
 
-#: src/diskform.py:92 src/diskform.py:139
+#: src/diskform.py:92
+#: src/diskform.py:139
 msgid "Disks"
-msgstr ""
+msgstr "Discos"
 
-#: src/diskform.py:93 src/diskform.py:140
+#: src/diskform.py:93
+#: src/diskform.py:140
 msgid "Partitions"
-msgstr ""
+msgstr "Particiones"
 
 #: src/diskform.py:133
 msgid "File System Type :"
-msgstr ""
+msgstr "Tipo de Sistema de Archivos:"
 
 #: src/diskform.py:134
 msgid "Mount Point :"
-msgstr ""
+msgstr "Punto de Montaje:"
 
 #: src/diskform.py:135
 msgid "Additional Options :"
-msgstr ""
+msgstr "Opciones adicionales:"
 
 #: src/diskform.py:136
 msgid "Get Default Options"
-msgstr ""
+msgstr "Usar opciones pod defecto"
 
 #: src/diskform.py:137
 msgid "Find Disks Automatically"
-msgstr ""
+msgstr "Detectar discos automaticamente"
 
 #: src/diskform.py:138
 msgid "Show System Partitions"
-msgstr ""
+msgstr "Mostrar Particiones del Sistema"
 
+# i translated as if "to apply changes"..
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr ""
+msgstr "Para aplicar los cambios se debe ejecutar el Disk Manager como root"
+
