--- a/trunk/tasma/network-manager/po/de.po
+++ b/trunk/tasma/network-manager/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: network manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-01 13:23+0200\n"
+"POT-Creation-Date: 2006-12-04 09:33+0200\n"
 "PO-Revision-Date: 2006-11-06 01:36+0100\n"
 "Last-Translator: Mustafa <test>\n"
 "Language-Team: german <de@li.org>\n"
@@ -15,13 +15,91 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: connection.py:33 browser.py:41
+#: browser.py:41 connection.py:33
 msgid "Name:"
 msgstr "Name:"
+
+#: browser.py:46 connection.py:209
+msgid "Address:"
+msgstr "Adresse:"
+
+#: browser.py:49 browser.py:137
+msgid "Automatic"
+msgstr ""
+
+#: browser.py:79
+#, fuzzy
+msgid "Turn on/off connection"
+msgstr "Neue Verbindung"
+
+#: browser.py:92
+#, fuzzy
+msgid "Configure connection"
+msgstr "Netzwerkverbindungen konfigurieren"
+
+#: browser.py:95
+#, fuzzy
+msgid "Delete connection"
+msgstr "Verbindung löschen?"
+
+#: browser.py:113
+#, python-format
+msgid ""
+"Should I delete the\n"
+"'%s'\n"
+"connection?"
+msgstr ""
+"Soll ich die \n"
+"'%s'\n"
+"Verbindung löschen?"
+
+#: browser.py:114
+msgid "Delete connection?"
+msgstr "Verbindung löschen?"
+
+#: browser.py:362
+#, fuzzy
+msgid "New connection"
+msgstr "Neue Verbindung"
+
+#: browser.py:366 nameconf.py:27
+#, fuzzy
+msgid "Name Service Settings"
+msgstr "Netzwerk Einstellungen"
+
+#: browser.py:398
+#, fuzzy
+msgid "Network Connections Help"
+msgstr "Netzwerkverbindungen"
+
+#: nameconf.py:35
+msgid "Computer"
+msgstr "Computer"
+
+#: nameconf.py:39
+msgid "Host name:"
+msgstr "Hostname:"
+
+#: nameconf.py:42 connection.py:234
+msgid "Name servers"
+msgstr "Name-Server"
+
+#: nameconf.py:88
+msgid "Add Name Server"
+msgstr "Name-Server hinzufügen"
+
+#: nameconf.py:88
+msgid "Name server:"
+msgstr "Name-Server:"
 
 #: connection.py:41
 msgid "Device:"
 msgstr "Gerät:"
+
+#: connection.py:46
+#, fuzzy
+msgid "Select"
+msgstr "Kein Gerät"
 
 #: connection.py:61
 msgid "Scan"
@@ -73,10 +151,6 @@ msgstr "Automatisch beziehen (DHCP)"
 msgid "Manual"
 msgstr "Manuell"
 
-#: connection.py:209 browser.py:46
-msgid "Address:"
-msgstr "Adresse:"
-
 #: connection.py:215 connection.py:230 connection.py:246
 msgid "Custom"
 msgstr ""
@@ -89,15 +163,11 @@ msgstr "Netzmaske:"
 msgid "Gateway:"
 msgstr "Gateway:"
 
-#: connection.py:234 nameconf.py:42
-msgid "Name servers"
-msgstr "Name-Server"
-
 #: connection.py:244
 msgid "From query"
 msgstr ""
 
-#: connection.py:437
+#: connection.py:438
 msgid "Configure network connection"
 msgstr "Netzwerkverbindungen konfigurieren"
 
@@ -114,71 +184,6 @@ msgstr "Netzwerk KGA wird bereits ausgeführt!"
 #: comariface.py:319
 msgid "new connection"
 msgstr "Neue Verbindung"
-
-#: nameconf.py:27 browser.py:364
-#, fuzzy
-msgid "Name Service Settings"
-msgstr "Netzwerk Einstellungen"
-
-#: nameconf.py:35
-msgid "Computer"
-msgstr "Computer"
-
-#: nameconf.py:39
-msgid "Host name:"
-msgstr "Hostname:"
-
-#: nameconf.py:88
-msgid "Add Name Server"
-msgstr "Name-Server hinzufügen"
-
-#: nameconf.py:88
-msgid "Name server:"
-msgstr "Name-Server:"
-
-#: browser.py:49 browser.py:137
-msgid "Automatic"
-msgstr ""
-
-#: browser.py:79
-#, fuzzy
-msgid "Turn on/off connection"
-msgstr "Neue Verbindung"
-
-#: browser.py:92
-#, fuzzy
-msgid "Configure connection"
-msgstr "Netzwerkverbindungen konfigurieren"
-
-#: browser.py:95
-#, fuzzy
-msgid "Delete connection"
-msgstr "Verbindung löschen?"
-
-#: browser.py:113
-#, python-format
-msgid ""
-"Should I delete the\n"
-"'%s'\n"
-"connection?"
-msgstr ""
-"Soll ich die \n"
-"'%s'\n"
-"Verbindung löschen?"
-
-#: browser.py:114
-msgid "Delete connection?"
-msgstr "Verbindung löschen?"
-
-#: browser.py:360
-#, fuzzy
-msgid "New connection"
-msgstr "Neue Verbindung"
-
-#: browser.py:396
-#, fuzzy
-msgid "Network Connections Help"
-msgstr "Netzwerkverbindungen"
 
 #: newconn.py:26
 #, fuzzy
