--- a/trunk/tasma/network-manager/po/es.po
+++ b/trunk/tasma/network-manager/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: network manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-01 13:23+0200\n"
+"POT-Creation-Date: 2006-12-04 09:33+0200\n"
 "PO-Revision-Date: 2006-11-26 17:25-0400\n"
 "Last-Translator: Klemens Häckel <click3d(.a)linuxmail.org>\n"
 "Language-Team: spanish <es@li.org>\n"
@@ -15,13 +15,85 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: connection.py:33 browser.py:41
+#: browser.py:41 connection.py:33
 msgid "Name:"
 msgstr "Nombre"
+
+#: browser.py:46 connection.py:209
+msgid "Address:"
+msgstr "Dirección:"
+
+#: browser.py:49 browser.py:137
+msgid "Automatic"
+msgstr "Automático"
+
+#: browser.py:79
+msgid "Turn on/off connection"
+msgstr "Habilitar/Deshabilitar conexión"
+
+#: browser.py:92
+msgid "Configure connection"
+msgstr "Configurar conexión"
+
+#: browser.py:95
+msgid "Delete connection"
+msgstr "Eliminar conexión"
+
+#: browser.py:113
+#, python-format
+msgid ""
+"Should I delete the\n"
+"'%s'\n"
+"connection?"
+msgstr ""
+"Debería eliminar\n"
+"la conexión\n"
+"'%s' ?"
+
+#: browser.py:114
+msgid "Delete connection?"
+msgstr "Eliminar conexión ?"
+
+#: browser.py:362
+msgid "New connection"
+msgstr "Conexión nueva"
+
+#: browser.py:366 nameconf.py:27
+msgid "Name Service Settings"
+msgstr "Parámetros del servivio de nombres"
+
+#: browser.py:398
+msgid "Network Connections Help"
+msgstr "Ayuda de conexión de red"
+
+#: nameconf.py:35
+msgid "Computer"
+msgstr "Computadora"
+
+#: nameconf.py:39
+msgid "Host name:"
+msgstr "Nombre de Host:"
+
+#: nameconf.py:42 connection.py:234
+msgid "Name servers"
+msgstr "Servidor de Nombres"
+
+#: nameconf.py:88
+msgid "Add Name Server"
+msgstr "Agregar Servidor de nombre"
+
+#: nameconf.py:88
+msgid "Name server:"
+msgstr "Servidor de Nombre:"
 
 #: connection.py:41
 msgid "Device:"
 msgstr "Dispositivo:"
+
+#: connection.py:46
+#, fuzzy
+msgid "Select"
+msgstr "Seleccionar dispositivo:"
 
 #: connection.py:61
 msgid "Scan"
@@ -71,10 +143,6 @@ msgstr "Asignación automatica (DHCP)"
 msgid "Manual"
 msgstr "Manual"
 
-#: connection.py:209 browser.py:46
-msgid "Address:"
-msgstr "Dirección:"
-
 #: connection.py:215 connection.py:230 connection.py:246
 msgid "Custom"
 msgstr "Personalizado"
@@ -87,15 +155,11 @@ msgstr "Mascara de Red:"
 msgid "Gateway:"
 msgstr "Puerto de Enlace:"
 
-#: connection.py:234 nameconf.py:42
-msgid "Name servers"
-msgstr "Servidor de Nombres"
-
 #: connection.py:244
 msgid "From query"
 msgstr "From query"
 
-#: connection.py:437
+#: connection.py:438
 msgid "Configure network connection"
 msgstr "Configurar conexiones de Red"
 
@@ -110,65 +174,6 @@ msgstr "Módulo de administración de Red ya está instalado!"
 #: comariface.py:319
 msgid "new connection"
 msgstr "conexión nueva"
-
-#: nameconf.py:27 browser.py:364
-msgid "Name Service Settings"
-msgstr "Parámetros del servivio de nombres"
-
-#: nameconf.py:35
-msgid "Computer"
-msgstr "Computadora"
-
-#: nameconf.py:39
-msgid "Host name:"
-msgstr "Nombre de Host:"
-
-#: nameconf.py:88
-msgid "Add Name Server"
-msgstr "Agregar Servidor de nombre"
-
-#: nameconf.py:88
-msgid "Name server:"
-msgstr "Servidor de Nombre:"
-
-#: browser.py:49 browser.py:137
-msgid "Automatic"
-msgstr "Automático"
-
-#: browser.py:79
-msgid "Turn on/off connection"
-msgstr "Habilitar/Deshabilitar conexión"
-
-#: browser.py:92
-msgid "Configure connection"
-msgstr "Configurar conexión"
-
-#: browser.py:95
-msgid "Delete connection"
-msgstr "Eliminar conexión"
-
-#: browser.py:113
-#, python-format
-msgid ""
-"Should I delete the\n"
-"'%s'\n"
-"connection?"
-msgstr ""
-"Debería eliminar\n"
-"la conexión\n"
-"'%s' ?"
-
-#: browser.py:114
-msgid "Delete connection?"
-msgstr "Eliminar conexión ?"
-
-#: browser.py:360
-msgid "New connection"
-msgstr "Conexión nueva"
-
-#: browser.py:396
-msgid "Network Connections Help"
-msgstr "Ayuda de conexión de red"
 
 #: newconn.py:26
 msgid "Create a new connection"
