--- a/trunk/tasma/network-manager/po/tr.po
+++ b/trunk/tasma/network-manager/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: net-kga 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-01 13:23+0200\n"
+"POT-Creation-Date: 2006-12-04 09:33+0200\n"
 "PO-Revision-Date: 2005-12-19 20:02+0200\n"
 "Last-Translator: Gürer Özen <gurer@uludag.org.tr>\n"
 "Language-Team: tr <tr@li.org>\n"
@@ -15,13 +15,83 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: connection.py:33 browser.py:41
+#: browser.py:41 connection.py:33
 msgid "Name:"
 msgstr "İsim:"
+
+#: browser.py:46 connection.py:209
+msgid "Address:"
+msgstr "Adres:"
+
+#: browser.py:49 browser.py:137
+msgid "Automatic"
+msgstr "Otomatik"
+
+#: browser.py:79
+msgid "Turn on/off connection"
+msgstr "Bağlantıyı aç/kapa"
+
+#: browser.py:92
+msgid "Configure connection"
+msgstr "Bağlantıyı ayarla"
+
+#: browser.py:95
+msgid "Delete connection"
+msgstr "Bağlantıyı sil"
+
+#: browser.py:113
+#, python-format
+msgid ""
+"Should I delete the\n"
+"'%s'\n"
+"connection?"
+msgstr ""
+"'%s'\n"
+"bağlantısını sileyim mi?"
+
+#: browser.py:114
+msgid "Delete connection?"
+msgstr "Bağlantıyı sil?"
+
+#: browser.py:362
+msgid "New connection"
+msgstr "Yeni bağlantı"
+
+#: browser.py:366 nameconf.py:27
+msgid "Name Service Settings"
+msgstr "İsim Servisi Ayarları"
+
+#: browser.py:398
+msgid "Network Connections Help"
+msgstr "Ağ Bağlantıları Yardımı"
+
+#: nameconf.py:35
+msgid "Computer"
+msgstr "Bilgisayar"
+
+#: nameconf.py:39
+msgid "Host name:"
+msgstr "Makina adı:"
+
+#: nameconf.py:42 connection.py:234
+msgid "Name servers"
+msgstr "İsim sunucuları"
+
+#: nameconf.py:88
+msgid "Add Name Server"
+msgstr "İsim Sunucusu Ekle"
+
+#: nameconf.py:88
+msgid "Name server:"
+msgstr "İsim sunucusu:"
 
 #: connection.py:41
 msgid "Device:"
 msgstr "Aygıt:"
+
+#: connection.py:46
+msgid "Select"
+msgstr "Aygıt seç"
 
 #: connection.py:61
 msgid "Scan"
@@ -71,10 +141,6 @@ msgstr "Otomatik ayar (DHCP)"
 msgid "Manual"
 msgstr "Elle ayarla"
 
-#: connection.py:209 browser.py:46
-msgid "Address:"
-msgstr "Adres:"
-
 #: connection.py:215 connection.py:230 connection.py:246
 msgid "Custom"
 msgstr "Özel"
@@ -87,15 +153,11 @@ msgstr "Ağ maskesi:"
 msgid "Gateway:"
 msgstr "Ağ geçidi:"
 
-#: connection.py:234 nameconf.py:42
-msgid "Name servers"
-msgstr "İsim sunucuları"
-
 #: connection.py:244
 msgid "From query"
 msgstr "Sorgudan"
 
-#: connection.py:437
+#: connection.py:438
 msgid "Configure network connection"
 msgstr "Ağ bağlantısını ayarla"
 
@@ -110,64 +172,6 @@ msgstr "Ağ ayarlama arayüzü zaten çalışıyor!"
 #: comariface.py:319
 msgid "new connection"
 msgstr "yeni bağlantı"
-
-#: nameconf.py:27 browser.py:364
-msgid "Name Service Settings"
-msgstr "İsim Servisi Ayarları"
-
-#: nameconf.py:35
-msgid "Computer"
-msgstr "Bilgisayar"
-
-#: nameconf.py:39
-msgid "Host name:"
-msgstr "Makina adı:"
-
-#: nameconf.py:88
-msgid "Add Name Server"
-msgstr "İsim Sunucusu Ekle"
-
-#: nameconf.py:88
-msgid "Name server:"
-msgstr "İsim sunucusu:"
-
-#: browser.py:49 browser.py:137
-msgid "Automatic"
-msgstr "Otomatik"
-
-#: browser.py:79
-msgid "Turn on/off connection"
-msgstr "Bağlantıyı aç/kapa"
-
-#: browser.py:92
-msgid "Configure connection"
-msgstr "Bağlantıyı ayarla"
-
-#: browser.py:95
-msgid "Delete connection"
-msgstr "Bağlantıyı sil"
-
-#: browser.py:113
-#, python-format
-msgid ""
-"Should I delete the\n"
-"'%s'\n"
-"connection?"
-msgstr ""
-"'%s'\n"
-"bağlantısını sileyim mi?"
-
-#: browser.py:114
-msgid "Delete connection?"
-msgstr "Bağlantıyı sil?"
-
-#: browser.py:360
-msgid "New connection"
-msgstr "Yeni bağlantı"
-
-#: browser.py:396
-msgid "Network Connections Help"
-msgstr "Ağ Bağlantıları Yardımı"
 
 #: newconn.py:26
 msgid "Create a new connection"
